feat: fts examples
